<resources>
    <string name="app_name">Disassembler</string>
    <string name="app_info">Application info</string>
    <string name="dev_info">Developer info</string>
    <string name="dev_info_detail">Check out developer info</string>
    <string name="send_mail">Send Email</string>
    <string name="send_mail_detail">Send an e-mail to the developer.</string>
    <string name="open_info">Open source info</string>
    <string name="open_info_detail">Open source license</string>
    <string name="send_feature_request">Send Feature request</string>
    <string name="send_feature_request_detail">Send a feature request to the developer.</string>
    <string name="disasmTheme">Disassembly theme</string>
    <string name="permission_needed">The storage permission is absolutely needed!!</string>
    <string name="fail_readfile">Failed to read file!</string>
    <string name="fail_exportzip">Failed to export zip</string>
    <string name="fail_loadraw">Error loading from raw</string>
    <string name="err_invalid_value">Please enter valid values: </string>
    <string name="copied">Copied!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="choose_storage">Choose Storage</string>
    <string name="choose_external_storage">Choose External Storage</string>
    <string name="external_storage">External storage</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1064966062299374~9116700670</string>
    <string name="Location">Location:</string>
    <string name="FileSize">File size:</string>
    <string name="FoffsCS">File offset of CS:</string>
    <string name="FoffsCSEd">File offset of CS end :</string>
    <string name="FoffsEP">File offset of entry point:</string>
    <string name="VAofCS">Virtual address of CS:</string>
    <string name="VAofCSE">Virtual address of CS end:</string>
    <string name="VAofEP">Virtual address of EP:</string>
    <string name="address">Address</string>
    <string name="label">Label</string>
    <string name="instruction">Instruction</string>
    <string name="condition">Condition</string>
    <string name="operands">Operands</string>
    <string name="comment">Comment</string>
    <string name="thank_you">Thank you</string>
    <string name="disassembly_highlight_settings">Disassembly Highlight Settings</string>
    <string name="preview">preview</string>
    <string name="main_select_source_guide">Select any file to disassemble, then open sub files from the drawer left.</string>
    <string name="select_file">Select file</string>
    <string name="architecture">Architecture:</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="override_autosetup">Override autosetup</string>
    <string name="show_details">Show details</string>
    <string name="save_details_to_file">Save Details to file</string>
    <string name="export">Export</string>
    <string name="choose_columns">Choose columns</string>
    <string name="property">Property</string>
    <string name="open_calculator">Calculator</string>
    <string name="save">save</string>
    <string name="donate_see_ad">See ad</string>
    <string name="settings_help">Settings / Help</string>
    <string name="NoRoot_GoDefault">Unable to get root access. Going to default directory</string>
    <string name="location">Location: </string>
    <string name="cannot_be_read">The folder [%1$s] cannot be read!</string>
    <string name="validaddress">Please enter a valid address.</string>
    <string name="selfilefirst">Please Select a file first.</string>
    <string name="newProject">Create new Project</string>
    <string name="enterNewProjName">Enter new project name</string>
    <string name="failSaveFile">Something went wrong saving file</string>
    <string name="calculator">Calculator</string>
    <string name="failCreateProject">Error creating a project!!</string>
    <string name="saving">Saving…</string>
    <string name="export_as">Export as…</string>
    <string name="send_crash_via_email">Send crash report as an issue by email</string>
    <string name="didUgrant">Did you grant required permissions to this app?</string>
    <string name="overview">Overview</string>
    <string name="details">Details</string>
    <string name="disassembly">Disassembly</string>
    <string name="symbols">Symbols</string>
    <string name="hexview">Hex View</string>
    <string name="permissions">Permissions</string>
    <string name="permissionMsg">- Read/Write storage(obvious)</string>
    <string name="fail_readfile_root">The root permission required to read this file: Permission denied; Failed to read the file</string>
    <string name="online_help">Online help</string>
    <string name="refresh">refresh</string>
    <string name="viewlog">Log</string>
    <string name="foundstrings">Strings</string>
    <string name="analysis">Analysis</string>
    <string name="hello_blank_fragment">Not yet implemented.</string>
    <string name="closeTab">Close tab</string>
    <string name="closeFile">Close File</string>
    <string name="choose_text_colors_and_background_colors">Choose text colors and background colors</string>
    <string name="no_data">No Data</string>
    <string name="show">show</string>
    <string name="jump_to">Jump to</string>
    <string name="find">Find</string>
    <string name="analyze">Analyze</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="define_Capstone" translatable="false"></string>
    <string name="library_Capstone_author" translatable="false">aquynh</string>
    <string name="library_Capstone_authorWebsite" translatable="false">https://github.com/aquynh</string>
    <string name="library_Capstone_libraryName" translatable="false">Capstone </string>
    <string name="library_Capstone_libraryDescription" translatable="false">Capstone disassembly/disassembler framework: Core (Arm, Arm64, BPF, EVM, M68K, M680X, MOS65xx, Mips, PPC, RISCV, Sparc, SystemZ, TMS320C64x, Web Assembly, X86, X86_64, XCore) + bindings. http://www.capstone-engine.org </string>
    <string name="library_Capstone_libraryVersion" translatable="false">4.0.1 </string>
    <string name="library_Capstone_libraryWebsite" translatable="false">https://github.com/aquynh/capstone</string>
    <string name="library_Capstone_licenseId" translatable="false">apache_2_0 </string>
    <string name="library_Capstone_isOpenSource" translatable="false"> true </string>
    <string name="library_Capstone_repositoryLink" translatable="false">https://github.com/aquynh/capstone </string>
    <string name="define_ColorPickerView" translatable="false"></string>
    <string name="library_ColorPickerView_author" translatable="false">skydoves</string>
    <string name="library_ColorPickerView_authorWebsite" translatable="false">https://github.com/skydoves</string>
    <string name="library_ColorPickerView_libraryName" translatable="false">ColorPickerView </string>
    <string name="library_ColorPickerView_libraryDescription" translatable="false">Android colorpicker for getting colors from any images by tapping on the desired color. </string>
    <string name="library_ColorPickerView_libraryVersion" translatable="false">2.1.6 </string>
    <string name="library_ColorPickerView_libraryWebsite" translatable="false">https://github.com/skydoves/ColorPickerView</string>
    <string name="library_ColorPickerView_licenseId" translatable="false">apache_2_0 </string>
    <string name="library_ColorPickerView_isOpenSource" translatable="false"> true </string>
    <string name="library_ColorPickerView_repositoryLink" translatable="false">https://github.com/skydoves/ColorPickerView </string>
    <string name="define_Java_binutils" translatable="false"></string>
    <string name="library_Javabinutils_author" translatable="false">jawi</string>
    <string name="library_Javabinutils_authorWebsite" translatable="false">https://github.com/jawi</string>
    <string name="library_Javabinutils_libraryName" translatable="false">java_binutils </string>
    <string name="library_Javabinutils_libraryDescription" translatable="false">Provides a java library to read AR, ELF, COFF and other kind of binary
files </string>
    <string name="library_Javabinutils_libraryVersion" translatable="false">1.0.0 </string>
    <string name="library_Javabinutils_libraryWebsite" translatable="false">https://github.com/jawi/java_binutils</string>
    <string name="library_Javabinutils_licenseId" translatable="false">apache_2_0 </string>
    <string name="library_Javabinutils_isOpenSource" translatable="false"> true </string>
    <string name="library_Javabinutils_repositoryLink" translatable="false">https://github.com/jawi/java_binutils </string>
    <string name="define_PECOFF4J" translatable="false"></string>
    <string name="library_PECOFF4J_author" translatable="false">kichik</string>
    <string name="library_PECOFF4J_authorWebsite" translatable="false">https://github.com/kichik</string>
    <string name="library_PECOFF4J_libraryName" translatable="false">PECOFF4J </string>
    <string name="library_PECOFF4J_libraryDescription" translatable="false">PE/COFF 4J is a java engineering library for portable executables, the format used by Windows </string>
    <string name="library_PECOFF4J_libraryVersion" translatable="false">0.0.2.2 </string>
    <string name="library_PECOFF4J_libraryWebsite" translatable="false">https://github.com/kichik/pecoff4j</string>
    <string name="library_PECOFF4J_licenseId" translatable="false">apache_2_0 </string>
    <string name="library_PECOFF4J_isOpenSource" translatable="false"> true </string>
    <string name="library_PECOFF4J_repositoryLink" translatable="false">https://github.com/kichik/pecoff4j </string>
    <string name="define_RootFilePicker" translatable="false"></string>
    <string name="library_RootFilePicker_author" translatable="false">KYHSGeekCode</string>
    <string name="library_RootFilePicker_authorWebsite" translatable="false">https://github.com/KYHSGeekCode</string>
    <string name="library_RootFilePicker_libraryName" translatable="false">RootFilePicker </string>
    <string name="library_RootFilePicker_libraryDescription" translatable="false">The simplest root file picker for android apps. </string>
    <string name="library_RootFilePicker_libraryVersion" translatable="false">1.0.0 </string>
    <string name="library_RootFilePicker_libraryWebsite" translatable="false">https://github.com/KYHSGeekCode/RootFilePicker</string>
    <string name="library_RootFilePicker_licenseId" translatable="false">mit </string>
    <string name="library_RootFilePicker_isOpenSource" translatable="false"> true </string>
    <string name="library_RootFilePicker_repositoryLink" translatable="false">https://github.com/KYHSGeekCode/RootFilePicker </string>
    <string name="define_androidMultiLevelListview" translatable="false"></string>
    <string name="library_androidMultiLevelListview_author" translatable="false">open-rnd</string>
    <string name="library_androidMultiLevelListview_authorWebsite" translatable="false">https://github.com/open-rnd</string>
    <string name="library_androidMultiLevelListview_libraryName" translatable="false">android-multi-level-listview </string>
</resources>