<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/closetab"
        android:title="@string/closeTab"/>
    <item android:title="@string/show">
        <menu>
            <item
                android:id="@+id/showSymbols"
                android:title="@string/symbols" />
            <item
                android:id="@+id/showDisassembly"
                android:title="@string/disassembly" />
            <item
                android:id="@+id/showDetails"
                android:title="@string/details" />
        </menu>
    </item>
    <item
        android:id="@+id/jumpto"
        android:title="@string/jump_to" />

    <item
        android:id="@+id/choosecolumns"
        android:title="@string/choose_columns" />
    <item
        android:id="@+id/analyze"
        android:title="@string/analyze" />
</menu>
