<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/apptitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="5"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="5"
        android:text="@string/main_select_source_guide"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apptitleTv" />

    <EditText
        android:id="@+id/fileNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:ems="10"
        android:inputType="textMultiLine|text|textImeMultiLine"
        app:layout_constraintEnd_toStartOf="@id/selFile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <Button
        android:id="@+id/selFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="1"
        android:layout_weight="1.0"
        android:text="@string/select_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fileNameText"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />



</androidx.constraintlayout.widget.ConstraintLayout>
